--- a/css/estilodescripcion.css
+++ b/css/estilodescripcion.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Fjalla+One&family=Trispace:wght@200&display=swap');
+
 body {
     font-family: 'Fjalla One', sans-serif;
 }
@@ -17,25 +18,24 @@ li {
     background-color: rgb(0, 0, 0);
     text-align: center;
     font-weight: bold;
-    font-size: 25px;  
-    background: radial-gradient(#968d8b,rgb(65, 60, 60) , rgb(10, 10, 10) , #000000);
-  
-    
+    font-size: 25px;
+    background: radial-gradient(#342F29, #3f3932, #27231f, #000000);
+
+
 }
 
 
 
 body {
-    background-image :url('../img/57-576139_grunge-black-background-background-gru-grunge-black-grunge.jpg')
-    
-} 
+    background-image: url('../img/57-576139_grunge-black-background-background-gru-grunge-black-grunge.jpg')
+}
 
 
 
 
 h1 {
     color: rgb(236, 236, 236);
-    
+
 }
 
 
@@ -47,12 +47,12 @@ h2 {
 
 h3 {
     color: white;
-    
+    text-align: center;
 }
 
 p {
     color: white;
-    
+
 }
 
 
@@ -62,20 +62,20 @@ a {
     color: rgb(231, 216, 216);
 }
 
- main {
+main {
     color: white;
- }
+}
 
- footer {
+footer {
     color: white;
- }
+}
 
 
 
 
 
 .cambiamosDisplay {
- display: block;
+    display: block;
 }
 
 footer {
@@ -83,23 +83,23 @@ footer {
 }
 
 main {
-   
+
     text-align: center;
 }
 
 
 
 img {
-  
+
     width: 50%;
-   
+
 }
 
 
 
 .img2Dos {
     width: 300px;
-    
+
 }
 
 .img3tres {
@@ -123,6 +123,7 @@ section {
     0% {
         opacity: 0;
     }
+
     100% {
         opacity: 100%;
     }
@@ -132,14 +133,4 @@ footer {
     animation-name: texto;
     animation-duration: 2s;
     animation-iteration-count: infinite;
-} 
-
-
-
-
-
-
-
-
-
-
+}
