--- a/css/estilolistacap.css
+++ b/css/estilolistacap.css
@@ -1,16 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Fjalla+One&family=Trispace:wght@200&display=swap');
+
 body {
     font-family: 'Fjalla One', sans-serif;
 }
 
 body {
-    background-image :url('../img/57-576139_grunge-black-background-background-gru-grunge-black-grunge.jpg')
-
+    background-image: url('../img/57-576139_grunge-black-background-background-gru-grunge-black-grunge.jpg')
 }
 
 ul {
     list-style: none;
 }
+
 li {
     list-style: none;
     text-align: center;
@@ -20,15 +21,15 @@ li {
     background-color: rgb(0, 0, 0);
     text-align: center;
     font-weight: bold;
-    font-size: 25px;  
-    background: radial-gradient(#968d8b,rgb(65, 60, 60) , rgb(10, 10, 10) , #000000);
-  
-    
+    font-size: 25px;
+    background: radial-gradient(#342F29, #3f3932, #27231f, #000000);
+
+
 }
 
 
 p {
-    font-size: 30px;
+    color: white;
 }
 
 
@@ -42,61 +43,60 @@ h2 {
     color: white;
     text-align: center;
 }
+
 h3 {
     color: white;
-}
-
-p {
-    color: white;
-    
+    text-align: center;
 }
 
 
 
-h4{
+h4 {
     color: white;
 }
+
 a {
     color: rgb(231, 216, 216);
 }
 
- main {
+main {
     color: white;
- }
-
- footer {
-    color: white;
- }
-
-h3 {
-    text-align: center;
 }
 
-img {
-  
-    width: 50%;
+footer {
+    color: white;
 }
+
+
+
+
 
 .cambiamosDisplay {
- display: block;
+    display: block;
 }
+
 footer {
     text-align: center;
 }
 
 main {
-   
+
     text-align: center;
+}
+
+img {
+
+    width: 50%;
 }
 
 iframe {
     width: 280px;
 }
 
-li{
+li {
     color: white;
-  
-   
+
+
 }
 
 
@@ -110,6 +110,7 @@ ol {
     0% {
         opacity: 0;
     }
+
     100% {
         opacity: 100%;
     }
@@ -119,13 +120,4 @@ footer {
     animation-name: texto;
     animation-duration: 2s;
     animation-iteration-count: infinite;
-} 
-
-     
-    
-    
-
-
-
-
-
+}
