--- a/css/estilolperso.css
+++ b/css/estilolperso.css
@@ -1,30 +1,31 @@
 @import url('https://fonts.googleapis.com/css2?family=Fjalla+One&family=Trispace:wght@200&display=swap');
+
 body {
     font-family: 'Fjalla One', sans-serif;
 }
 
 body {
-    background-image :url('../img/57-576139_grunge-black-background-background-gru-grunge-black-grunge.jpg')
-    
-    
+    background-image: url('../img/57-576139_grunge-black-background-background-gru-grunge-black-grunge.jpg')
 }
 
 ul {
     list-style: none;
-   
+
 }
-li{
+
+li {
     list-style: none;
+    color: white;
 }
 
 .primeraSeccion {
     background-color: rgb(0, 0, 0);
     text-align: center;
     font-weight: bold;
-    font-size: 25px;  
-    background: radial-gradient(#968d8b,rgb(65, 60, 60) , rgb(10, 10, 10) , #000000);
-  
-    
+    font-size: 25px;
+    background: radial-gradient(#968d8b, rgb(65, 60, 60), rgb(10, 10, 10), #000000);
+
+
 }
 
 
@@ -41,13 +42,15 @@ h2 {
     color: white;
     text-align: center;
 }
+
 h3 {
     color: white;
+    text-align: center;
 }
 
 p {
     color: white;
-    
+
 }
 
 
@@ -57,37 +60,38 @@ a {
     color: rgb(231, 216, 216);
 }
 
- main {
+main {
     color: white;
- }
-
- footer {
-    color: white;
- }
-
- li { color: white;}
-
-
-
-img {
-  
-    width: 50%;
 }
+
+footer {
+    color: white;
+}
+
+
+
+
+
+
 
 .cambiamosDisplay {
- display: block;
+    display: block;
 }
+
 footer {
     text-align: center;
 }
 
 main {
-   
+
     text-align: center;
 }
 
 
+img {
 
+    width: 50%;
+}
 
 
 .img2Dos {
@@ -103,15 +107,14 @@ main {
 
 
 
-p {
-    top: 10px;
-}
+
 
 
 @keyframes texto {
     0% {
         opacity: 0;
     }
+
     100% {
         opacity: 100%;
     }
@@ -121,4 +124,4 @@ footer {
     animation-name: texto;
     animation-duration: 2s;
     animation-iteration-count: infinite;
-} 
+}
